# client-service/docs/swagger.json
@@ -120,6 +120,40 @@
                 }
             }
         },
+        "/person/Login": {
+            "post": {
+                "description": "Login пользователя",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "client_service"
+                ],
+                "operationId": "client_service_login",
+                "parameters": [
+                    {
+                        "description": "Данные пользователя. Поля username и password не могут быть пустыми.",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/github_com_whitewolf185_SystemArchitecture_client-service_api_domain.LoginPayload"
+                        }
+                    }
+                ],
+                "responses": {
+                    "default": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_whitewolf185_SystemArchitecture_client-service_pkg_custom_errors.ErrCodes"
+                        }
+                    }
+                }
+            }
+        },
         "/person/SearchUserByUserName": {
             "get": {
                 "description": "удаление пользователя пользователя",
@@ -167,6 +201,17 @@
                 "is_driver": {
                     "type": "boolean"
                 },
+                "password": {
+                    "type": "string"
+                },
+                "user_name": {
+                    "type": "string"
+                }
+            }
+        },
+        "github_com_whitewolf185_SystemArchitecture_client-service_api_domain.LoginPayload": {
+            "type": "object",
+            "properties": {
                 "password": {
                     "type": "string"
                 },
